--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,15 @@
     transform: rotate(360deg);
   }
 }
+img{
+  height: 500px;
+  width: 100%;
+}
+h3{
+  margin: 50px;
+}
+/*faculty*/
+#faculty{
+  height: 100vh;
+  
+}
